@@ -5,6 +5,8 @@ What's new in version 0.8.4
   (thanks to Anders Torger)
 * Fix license terms with regard to PLPA
   (thanks to Tom Callaway)
+* getopt-based long options and --no-color
+  (thanks to Vincent Launchbury)
 
 What's new in version 0.8.3
 
